--- a/okapi.cabal
+++ b/okapi.cabal
@@ -135,12 +135,12 @@ executable calculator2-exe
     , websockets
   default-language: Haskell2010
 
-executable recipe-exe
+executable car-dealership-exe
   main-is: Main.hs
   other-modules:
       Paths_okapi
   hs-source-dirs:
-      examples/recipe
+      examples/car-dealership
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson >=1.4.7
@@ -161,6 +161,7 @@ executable recipe-exe
     , network
     , okapi
     , parser-combinators
+    , random
     , sqlite-simple
     , text
     , transformers
@@ -353,6 +354,44 @@ executable todo3-exe
     , okapi
     , parser-combinators
     , sqlite-simple
+    , text
+    , transformers
+    , unagi-chan
+    , vault
+    , wai
+    , wai-extra
+    , wai-websockets
+    , warp
+    , warp-tls
+    , websockets
+  default-language: Haskell2010
+
+executable twitter-clone-exe
+  main-is: Main.hs
+  other-modules:
+      Paths_okapi
+  hs-source-dirs:
+      examples/twitter-clone
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson >=1.4.7
+    , attoparsec
+    , base >=4.7 && <5
+    , base64
+    , bytestring
+    , containers
+    , cookie
+    , cryptonite
+    , extra
+    , http-api-data
+    , http-types
+    , memory
+    , mmorph
+    , mtl
+    , network
+    , okapi
+    , parser-combinators
+    , rel8
     , text
     , transformers
     , unagi-chan
