Modify haskell-src-meta so BlockArguments can be parsed

--- a/okapi.cabal
+++ b/okapi.cabal
@@ -44,6 +44,8 @@ library
     , directory
     , extra
     , filepath
+    , haskell-src-exts
+    , haskell-src-meta
     , http-api-data
     , http-types
     , memory
