--- a/okapi.cabal
+++ b/okapi.cabal
@@ -285,6 +285,7 @@ executable realworld-htmx-exe
     , Conduit.Model.FormError
     , Conduit.Model.SignupForm
     , Conduit.Model.SigninForm
+    , Conduit.Validate
   hs-source-dirs:
       examples/realworld-htmx
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -298,6 +299,7 @@ executable realworld-htmx-exe
     , cookie
     , cryptonite
     , extra
+    , forma
     , hasql
     , hedis
     , http-api-data
@@ -329,6 +331,7 @@ executable realworld-htmx-exe
   default-extensions:
       BlockArguments
     , ConstraintKinds
+    , DataKinds
     , DeriveAnyClass
     , DeriveGeneric
     , DerivingVia
@@ -337,6 +340,7 @@ executable realworld-htmx-exe
     , FlexibleInstances
     , GeneralizedNewtypeDeriving
     , MultiParamTypeClasses
+    , OverloadedLabels
     , OverloadedStrings
     , QuasiQuotes
     , RankNTypes
