--- a/okapi.cabal
+++ b/okapi.cabal
@@ -283,8 +283,10 @@ executable realworld-htmx-exe
     , Conduit.UI.SignupForm
     , Conduit.UI.SigninForm
     , Conduit.Model.FormError
+    , Conduit.Model.Newtype
     , Conduit.Model.SignupForm
     , Conduit.Model.SigninForm
+    , Conduit.Model.User
     , Conduit.Validate
   hs-source-dirs:
       examples/realworld-htmx
@@ -301,6 +303,8 @@ executable realworld-htmx-exe
     , extra
     , forma
     , hasql
+    , hasql-pool
+    , hasql-transaction
     , hedis
     , http-api-data
     , http-types
@@ -339,12 +343,86 @@ executable realworld-htmx-exe
     , FlexibleContexts
     , FlexibleInstances
     , GeneralizedNewtypeDeriving
+    , InstanceSigs
     , MultiParamTypeClasses
     , OverloadedLabels
     , OverloadedStrings
     , QuasiQuotes
     , RankNTypes
     , ScopedTypeVariables
+    , StandaloneDeriving
+    , TypeApplications
+    , TypeFamilies
+
+executable contacts-exe
+  main-is: Main.hs
+  other-modules:
+      Paths_okapi
+  hs-source-dirs:
+      examples/contacts
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson >=1.4.7
+    , attoparsec
+    , base >=4.7 && <5
+    , base64
+    , bytestring
+    , containers
+    , cookie
+    , cryptonite
+    , extra
+    , forma
+    , hasql
+    , hasql-pool
+    , hasql-transaction
+    , hedis
+    , http-api-data
+    , http-types
+    , interpolatedstring-perl6
+    , lucid2
+    , lucid2-htmx
+    , memory
+    , mmorph
+    , mtl
+    , network
+    , okapi
+    , parser-combinators
+    , random
+    , rel8
+    , text
+    , time
+    , transformers
+    , unagi-chan
+    , vault
+    , wai
+    , wai-extra
+    , wai-websockets
+    , warp
+    , warp-tls
+    , websockets
+    , word8
+  default-language: Haskell2010
+  default-extensions:
+      BlockArguments
+    , ConstraintKinds
+    , DataKinds
+    , DeriveAnyClass
+    , DeriveGeneric
+    , DerivingVia
+    , DuplicateRecordFields
+    , FlexibleContexts
+    , FlexibleInstances
+    , GeneralizedNewtypeDeriving
+    , InstanceSigs
+    , LambdaCase
+    , MultiParamTypeClasses
+    , OverloadedLabels
+    , OverloadedStrings
+    , PatternSynonyms
+    , QuasiQuotes
+    , RankNTypes
+    , ScopedTypeVariables
+    , StandaloneDeriving
     , TypeApplications
     , TypeFamilies
 
