--- a/okapi.cabal
+++ b/okapi.cabal
@@ -28,17 +28,19 @@ source-repository head
 library
   exposed-modules:
       Okapi
-      Okapi.Event
-      Okapi.Error
+      Okapi.HTTP.Event
+      Okapi.HTTP.Error
+      Okapi.HTTP.Error.Body
       Okapi.Log
-      Okapi.Request
-      Okapi.Request.Method
-      Okapi.Request.Path
-      Okapi.Request.Query
-      Okapi.Request.Headers
-      Okapi.Request.Body
-      Okapi.Request.Vault
-      Okapi.Response
+      Okapi.HTTP.Request
+      Okapi.HTTP.Request.Method
+      Okapi.HTTP.Request.Path
+      Okapi.HTTP.Request.Query
+      Okapi.HTTP.Request.Headers
+      Okapi.HTTP.Request.Body
+      Okapi.HTTP.Request.Vault
+      Okapi.HTTP.Response
+      Okapi.HTTP.Response.Body
       Okapi.HTTP
       Okapi.Internal.Error
       Okapi.Internal.Request
