--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,7 @@
     "@markdoc/markdoc": "^0.1.3",
     "@markdoc/next.js": "^0.1.5",
     "@sindresorhus/slugify": "^2.1.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.8",
     "clsx": "^1.2.0",
@@ -22,8 +23,8 @@
     "next": "12.2.5",
     "postcss-focus-visible": "^6.0.4",
     "postcss-import": "^14.1.0",
-    "prismjs": "^1.29.0",
     "prism-react-renderer": "^1.3.5",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.1.8"
