--- a/okapi.cabal
+++ b/okapi.cabal
@@ -28,6 +28,8 @@ source-repository head
 library
   exposed-modules:
       Okapi
+      Okapi.Monad
+      Okapi.Applicative
   other-modules:
       Paths_okapi
   hs-source-dirs:
@@ -49,432 +51,6 @@ library
     , mtl
     , network
     , parser-combinators
-    , text
-    , transformers
-    , unagi-chan
-    , vault
-    , wai
-    , wai-extra
-    , wai-websockets
-    , warp
-    , warp-tls
-    , websockets
-  default-language: Haskell2010
-
-executable calculator-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_okapi
-  hs-source-dirs:
-      examples/calculator
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson >=1.4.7
-    , attoparsec
-    , base >=4.7 && <5
-    , base64
-    , bytestring
-    , containers
-    , cookie
-    , cryptonite
-    , extra
-    , http-api-data
-    , http-types
-    , memory
-    , mmorph
-    , mtl
-    , network
-    , okapi
-    , parser-combinators
-    , text
-    , transformers
-    , unagi-chan
-    , vault
-    , wai
-    , wai-extra
-    , wai-websockets
-    , warp
-    , warp-tls
-    , websockets
-  default-language: Haskell2010
-
-executable calculator2-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_okapi
-  hs-source-dirs:
-      examples/calculator2
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson
-    , attoparsec
-    , base >=4.7 && <5
-    , base64
-    , bytestring
-    , containers
-    , cookie
-    , cryptonite
-    , extra
-    , http-api-data
-    , http-types
-    , memory
-    , mmorph
-    , mtl
-    , network
-    , okapi
-    , parser-combinators
-    , text
-    , transformers
-    , unagi-chan
-    , vault
-    , wai
-    , wai-extra
-    , wai-websockets
-    , warp
-    , warp-tls
-    , websockets
-  default-language: Haskell2010
-
-executable car-dealership-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_okapi
-  hs-source-dirs:
-      examples/car-dealership
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson >=1.4.7
-    , attoparsec
-    , base >=4.7 && <5
-    , base64
-    , bytestring
-    , containers
-    , cookie
-    , cryptonite
-    , extra
-    , http-api-data
-    , http-types
-    , interpolatedstring-perl6
-    , memory
-    , mmorph
-    , mtl
-    , network
-    , okapi
-    , parser-combinators
-    , random
-    , sqlite-simple
-    , text
-    , transformers
-    , unagi-chan
-    , vault
-    , wai
-    , wai-extra
-    , wai-websockets
-    , warp
-    , warp-tls
-    , websockets
-  default-language: Haskell2010
-
-executable dotodo-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_okapi
-  hs-source-dirs:
-      examples/dotodo
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson >=1.4.7
-    , attoparsec
-    , base >=4.7 && <5
-    , base64
-    , bytestring
-    , containers
-    , cookie
-    , cryptonite
-    , extra
-    , http-api-data
-    , http-types
-    , lucid2
-    , lucid2-htmx
-    , memory
-    , mmorph
-    , mtl
-    , network
-    , okapi
-    , parser-combinators
-    , sqlite-simple
-    , text
-    , transformers
-    , unagi-chan
-    , vault
-    , wai
-    , wai-extra
-    , wai-websockets
-    , warp
-    , warp-tls
-    , websockets
-  default-language: Haskell2010
-
-executable realworld-htmx-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_okapi
-  hs-source-dirs:
-      examples/realworld-htmx
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson >=1.4.7
-    , attoparsec
-    , base >=4.7 && <5
-    , base64
-    , bytestring
-    , containers
-    , cookie
-    , cryptonite
-    , extra
-    , hasql
-    , hedis
-    , http-api-data
-    , http-types
-    , lucid2
-    , lucid2-htmx
-    , memory
-    , mmorph
-    , mtl
-    , network
-    , okapi
-    , parser-combinators
-    , random
-    , rel8
-    , text
-    , transformers
-    , unagi-chan
-    , vault
-    , wai
-    , wai-extra
-    , wai-websockets
-    , warp
-    , warp-tls
-    , websockets
-  default-language: Haskell2010
-
-executable sse-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_okapi
-  hs-source-dirs:
-      examples/sse
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson >=1.4.7
-    , attoparsec
-    , base >=4.7 && <5
-    , base64
-    , bytestring
-    , containers
-    , cookie
-    , cryptonite
-    , extra
-    , http-api-data
-    , http-types
-    , memory
-    , mmorph
-    , mtl
-    , network
-    , okapi
-    , parser-combinators
-    , slave-thread
-    , text
-    , time
-    , transformers
-    , unagi-chan
-    , vault
-    , wai
-    , wai-extra
-    , wai-websockets
-    , warp
-    , warp-tls
-    , websockets
-  default-language: Haskell2010
-
-executable static-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_okapi
-  hs-source-dirs:
-      examples/static
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson >=1.4.7
-    , attoparsec
-    , base >=4.7 && <5
-    , base64
-    , bytestring
-    , containers
-    , cookie
-    , cryptonite
-    , extra
-    , http-api-data
-    , http-types
-    , memory
-    , mmorph
-    , mtl
-    , network
-    , okapi
-    , parser-combinators
-    , text
-    , transformers
-    , unagi-chan
-    , vault
-    , wai
-    , wai-extra
-    , wai-websockets
-    , warp
-    , warp-tls
-    , websockets
-  default-language: Haskell2010
-
-executable todo-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_okapi
-  hs-source-dirs:
-      examples/todo
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson >=1.4.7
-    , attoparsec
-    , base >=4.7 && <5
-    , base64
-    , bytestring
-    , containers
-    , cookie
-    , cryptonite
-    , extra
-    , http-api-data
-    , http-types
-    , memory
-    , mmorph
-    , mtl
-    , network
-    , okapi
-    , parser-combinators
-    , sqlite-simple
-    , text
-    , transformers
-    , unagi-chan
-    , vault
-    , wai
-    , wai-extra
-    , wai-websockets
-    , warp
-    , warp-tls
-    , websockets
-  default-language: Haskell2010
-
-executable todo2-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_okapi
-  hs-source-dirs:
-      examples/todo2
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson >=1.4.7
-    , attoparsec
-    , base >=4.7 && <5
-    , base64
-    , bytestring
-    , containers
-    , cookie
-    , cryptonite
-    , extra
-    , http-api-data
-    , http-types
-    , memory
-    , mmorph
-    , mtl
-    , network
-    , okapi
-    , parser-combinators
-    , sqlite-simple
-    , text
-    , transformers
-    , unagi-chan
-    , vault
-    , wai
-    , wai-extra
-    , wai-websockets
-    , warp
-    , warp-tls
-    , websockets
-  default-language: Haskell2010
-
-executable todo3-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_okapi
-  hs-source-dirs:
-      examples/todo3
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson >=1.4.7
-    , attoparsec
-    , base >=4.7 && <5
-    , base64
-    , bytestring
-    , containers
-    , cookie
-    , cryptonite
-    , extra
-    , http-api-data
-    , http-types
-    , interpolatedstring-perl6
-    , memory
-    , mmorph
-    , mtl
-    , network
-    , okapi
-    , parser-combinators
-    , sqlite-simple
-    , text
-    , transformers
-    , unagi-chan
-    , vault
-    , wai
-    , wai-extra
-    , wai-websockets
-    , warp
-    , warp-tls
-    , websockets
-  default-language: Haskell2010
-
-executable twitter-clone-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_okapi
-  hs-source-dirs:
-      examples/twitter-clone
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson >=1.4.7
-    , attoparsec
-    , base >=4.7 && <5
-    , base64
-    , bytestring
-    , containers
-    , cookie
-    , cryptonite
-    , extra
-    , http-api-data
-    , http-types
-    , memory
-    , mmorph
-    , mtl
-    , network
-    , okapi
-    , parser-combinators
-    , rel8
     , text
     , transformers
     , unagi-chan
