Add more OAPI stuff; get rid of pseudo-applicative

--- a/okapi.cabal
+++ b/okapi.cabal
@@ -106,6 +106,7 @@ test-suite okapi-test
     , mtl
     , network
     , okapi
+    , openapi3
     , parallel
     , parser-combinators
     , text
