AddRequest type and Matchpoint pattern

--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -30,6 +30,7 @@ library
       Okapi
       Okapi.Endpoint
       Okapi.Executable
+      Okapi.Matchpoint
       Okapi.Response
       Okapi.Script
       Okapi.Server
