--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -37,7 +37,7 @@ library
       Okapi.Script.Headers
       Okapi.Script.Body
       Okapi.Script.Responder
-      Okapi.Script.ResponderHeaders
+      Okapi.Script.AddHeader
   other-modules:
       Paths_okapi
   hs-source-dirs:
