Implement more parts of the OAPI Spec; rename fields

--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -55,6 +55,7 @@ library
     , extra
     , http-api-data
     , http-types
+    , insert-ordered-containers
     , kind-generics
     , kind-generics-th
     , linear-base
