--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -1,4 +1,4 @@
-cabal-version: 1.12
+cabal-version: 2.0
 
 -- This file has been generated from package.yaml by hpack version 0.34.4.
 --
@@ -122,3 +122,33 @@ test-suite okapi-test
     , warp-tls
     , websockets
   default-language: Haskell2010
+
+executable realworld
+    main-is:          Main.hs
+    other-modules:
+      Data
+      Database
+      Plan.Authentication
+      Plan.Registration
+      Plan.GetCurrentUser
+      Plan.UpdateUser
+      Plan.GetProfile
+      Plan.FollowUser
+      Plan.UnFollowUser
+      Plan.ListArticles
+
+    -- Modules included in this executable, other than Main.
+    -- other-modules:
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:
+      base ^>=4.16.4.0
+      , okapi
+      , text
+      , http-api-data
+      , pretty-simple
+      , aeson
+      , openapi3
+    hs-source-dirs:   realworld
+    default-language: Haskell2010
