--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -136,6 +136,17 @@ executable realworld
       Plan.FollowUser
       Plan.UnFollowUser
       Plan.ListArticles
+      Plan.FeedArticles
+      Plan.GetArticle
+      Plan.UpdateArticle
+      Plan.CreateArticle
+      Plan.DeleteArticle
+      Plan.AddComment
+      Plan.GetComments
+      Plan.DeleteComment
+      Plan.FavoriteArticle
+      Plan.UnFavoriteArticle
+      Plan.GetTags
 
     -- Modules included in this executable, other than Main.
     -- other-modules:
