--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -130,25 +130,25 @@ executable realworld
       Data
       Database
       JWT
-      Plan.Authentication
-      Plan.Registration
-      Plan.GetCurrentUser
-      Plan.UpdateUser
-      Plan.GetProfile
-      Plan.FollowUser
-      Plan.UnFollowUser
-      Plan.ListArticles
-      Plan.FeedArticles
-      Plan.GetArticle
-      Plan.UpdateArticle
-      Plan.CreateArticle
-      Plan.DeleteArticle
-      Plan.AddComment
-      Plan.GetComments
-      Plan.DeleteComment
-      Plan.FavoriteArticle
-      Plan.UnFavoriteArticle
-      Plan.GetTags
+      API.Authentication
+      API.Registration
+      API.GetCurrentUser
+      API.UpdateUser
+      API.GetProfile
+      API.FollowUser
+      API.UnFollowUser
+      API.ListArticles
+      API.FeedArticles
+      API.GetArticle
+      API.UpdateArticle
+      API.CreateArticle
+      API.DeleteArticle
+      API.AddComment
+      API.GetComments
+      API.DeleteComment
+      API.FavoriteArticle
+      API.UnFavoriteArticle
+      API.GetTags
 
     -- Modules included in this executable, other than Main.
     -- other-modules:
