Begin implementing realword server; add Alt instance for Security Scripts

--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -172,5 +172,6 @@ executable realworld
       , time
       , transformers
       , lens
+      , natural-transformation
     hs-source-dirs:   realworld
     default-language: Haskell2010
