Implement the basics for Elixir-like Plugs

--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -41,6 +41,7 @@ library
       Okapi.Parser.Responder
       Okapi.Parser.Responder.AddHeader
       Okapi.Parser.Security
+      Okapi.Plug
   other-modules:
       Paths_okapi
   hs-source-dirs:
