--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -29,17 +29,19 @@ library
   exposed-modules:
       Okapi
       Okapi.Server
-      Okapi.Parser
-      Okapi.Request
       Okapi.Route
-      Okapi.Parser.Route
-      Okapi.Parser.Query
-      Okapi.Parser.Headers
-      Okapi.Parser.Body
-      Okapi.Parser.Body.Multipart
-      Okapi.Parser.Responder
-      Okapi.Parser.Responder.AddHeader
-      Okapi.Parser.Security
+      Okapi.Spec
+      Okapi.Spec.Request
+      Okapi.Spec.Request.Path
+      Okapi.Spec.Request.Query
+      Okapi.Spec.Request.Headers
+      Okapi.Spec.Request.Body
+      Okapi.Spec.Request.Body.ContentType
+      Okapi.Spec.Request.Body.Form
+      Okapi.Spec.Request.Security
+      Okapi.Spec.Request.Security.Scheme
+      Okapi.Spec.Response
+      Okapi.Spec.Response.Headers
   other-modules:
       Paths_okapi
   hs-source-dirs:
@@ -127,41 +129,41 @@ test-suite okapi-test
     , websockets
   default-language: Haskell2010
 
-executable realworld
-    main-is:          Main.hs
-    other-modules:
-      App
-      Data
-      Database
-      JWT
-      Resource
-      API
-      API.Login
+-- executable realworld
+--     main-is:          Main.hs
+--     other-modules:
+--       App
+--       Data
+--       Database
+--       JWT
+--       Resource
+--       API
+--       API.Login
 
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
+--     -- Modules included in this executable, other than Main.
+--     -- other-modules:
 
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:
-      base >=4.7 && <5
-      , okapi
-      , text
-      , http-api-data
-      , http-types
-      , pretty-simple
-      , aeson
-      , bytestring
-      , jose
-      , openapi3
-      , sqlite-simple
-      , hedis
-      , time
-      , transformers
-      , lens
-      , natural-transformation
-      , warp
-      , wai
-      , aeson-pretty
-    hs-source-dirs:   realworld
-    default-language: Haskell2010
+--     -- LANGUAGE extensions used by modules in this package.
+--     -- other-extensions:
+--     build-depends:
+--       base >=4.7 && <5
+--       , okapi
+--       , text
+--       , http-api-data
+--       , http-types
+--       , pretty-simple
+--       , aeson
+--       , bytestring
+--       , jose
+--       , openapi3
+--       , sqlite-simple
+--       , hedis
+--       , time
+--       , transformers
+--       , lens
+--       , natural-transformation
+--       , warp
+--       , wai
+--       , aeson-pretty
+--     hs-source-dirs:   realworld
+--     default-language: Haskell2010
