Fix names; fix Splat combinator; experiment with type-level Response, API, and other parts where it makes sense

--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -42,6 +42,7 @@ library
       aeson
     , base >=4.7 && <5
     , base64
+    , binary
     , bytestring
     , case-insensitive
     , containers
