Attempt to add type-safe URL routing failed. Doesn't seem possible because I'm using lists to build the API structure. It seems I would need to implement custom combinators, like servant, which defeats the purpose of this library.

--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -32,6 +32,7 @@ library
       Okapi.Headers
       Okapi.Secret
       Okapi.App
+      Okapi.App2
       Okapi.Route
       Okapi.Response
   other-modules:
