--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -36,6 +36,7 @@ library
       Okapi.App
       Okapi.Route
       Okapi.Response
+      Example
   other-modules:
       Paths_okapi
   hs-source-dirs:
