Add Bookstore example

--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -37,6 +37,7 @@ library
       Okapi.Route
       Okapi.Response
       Example.Calculator
+      Example.Bookstore
   other-modules:
       Paths_okapi
   hs-source-dirs:
