Improve Generic Route implementation

--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -63,6 +63,7 @@ library
     , wai-extra
     , wai-logger
     , warp
+    , parser-combinators
   default-language: Haskell2010
 
 executable hello-world
