Add new machinery for RESPONSES!

--- a/new/new.cabal
+++ b/new/new.cabal
@@ -34,6 +34,7 @@ library
     -- other-extensions:
     build-depends:
         base >=4.7 && <5
+        , aeson
         , base64
         , binary
         , bytestring
